--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "react",
-  "homepage": "https://aravski09.github.io/aravshotsportfolio",
+  "name": "aravshotsportfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,17 +7,14 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
-    "@upstash/redis": "^1.35.3",
     "emailjs-com": "^3.2.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router-dom": "^7.7.0",
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.7.1",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
@@ -29,7 +25,6 @@
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "vite": "^7.0.4"
   }
